@@ -23,3 +23,4 @@
       wrt (not) changing versioning scheme.
 * Add full support for debhelper compat version 8 (check if something is
   missing to support).
+* Add a test case for finding (build) dependencies with META.yml.
