@@ -14,7 +14,7 @@ Build-Depends-Indep:
  libfile-touch-perl,
  liblist-moreutils-perl,
  perl (>= 5.10.1) | libmodule-corelist-perl (>= 2.14),
- libmodule-depends-perl,
+ libmodule-depends-perl (>= 0.15),
  libparse-debcontrol-perl,
  libparse-debianchangelog-perl,
  libtest-compile-perl,
@@ -52,7 +52,7 @@ Depends: debhelper (>= 7), ${perl:Depends}, ${misc:Depends},
  libemail-date-format-perl,
  liblist-moreutils-perl,
  perl (>= 5.10.1) | libmodule-corelist-perl (>= 2.14),
- libmodule-depends-perl,
+ libmodule-depends-perl (>= 0.15),
  libparse-debcontrol-perl,
  libparse-debianchangelog-perl,
  libtie-ixhash-perl,
