@@ -10,6 +10,11 @@ dh-make-perl (0.71-1) UNRELEASED; urgency=low
     Andrew Ruthven for reporting. (Closes: #596025)
   * Update my email address.
 
+  [ gregor herrmann ]
+  * Debian::Control::FromCPAN: also check test_requires and build_requires for
+    finding build dependencies; bump (build) dependency on
+    libmodule-depends-perl; closes: #601787.
+
  -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Wed, 08 Sep 2010 22:25:30 +0200
 
 dh-make-perl (0.70-1) unstable; urgency=low
